--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,21 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+go.mod
+go.sum
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Ignore bin Folder.
+bin/
+
+# Ignore the SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore other unneeded files.
+*.swp
+*~
+.project
+.DS_Store
+.idea
+.secret
+
